[gd_scene load_steps=2 format=2]

[ext_resource path="res://SaveGameTest.gd" type="Script" id=1]

[node name="SaveGameTest" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 14.0
text = "1"

[node name="Plus" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 38.0
text = "PLUS"

[node name="Minus" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 1024.0
margin_bottom = 62.0
text = "MINUS"

[node name="Save" type="Button" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 1024.0
margin_bottom = 86.0
text = "SAVE"

[connection signal="pressed" from="VBoxContainer/Plus" to="." method="_on_Plus_pressed"]
[connection signal="pressed" from="VBoxContainer/Minus" to="." method="_on_Minus_pressed"]
[connection signal="pressed" from="VBoxContainer/Save" to="." method="save_game"]
